[tool.poetry]
name = "test-gmail"
version = "0.1.0"
description = ""
authors = ["Evgeny Chernyshov <evgeny.chernyshov@hkeeper.global>"]
readme = "README.md"
packages = [{include = "test_gmail"}]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.82.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
